--- a/css/main.css
+++ b/css/main.css
@@ -913,29 +913,36 @@ body > * {
 
 .portfolio-card .portfolio-card__img {
   margin-bottom: 16px;
-  max-width: 350px;
-  max-height: 220px;
   object-fit: cover;
   object-position: center;
   /* Tablet */
 }
 @media (max-width: 1199px) {
   .portfolio-card .portfolio-card__img {
-    max-width: 270px;
-    max-height: 169px;
     margin-bottom: 10px;
   }
 }
+.portfolio-card .portfolio-card__img img {
+  width: 350px;
+  height: 220px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card .portfolio-card__img img {
+    width: 270px;
+    height: 169px;
+  }
+}
 @media (max-width: 899px) {
-  .portfolio-card .portfolio-card__img {
-    max-width: 180px;
-    max-height: 140px;
+  .portfolio-card .portfolio-card__img img {
+    width: 180px;
+    height: 140px;
   }
 }
 @media (max-width: 599px) {
-  .portfolio-card .portfolio-card__img {
-    max-width: 290px;
-    max-height: 180px;
+  .portfolio-card .portfolio-card__img img {
+    width: 290px;
+    height: 180px;
   }
 }
 .portfolio-card .portfolio-card__text {
@@ -977,28 +984,14 @@ body > * {
 }
 
 .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
-  max-width: 540px;
-  max-height: 370px;
   margin-bottom: 20px;
+  object-fit: cover;
+  object-position: center;
   /* Tablet */
-}
-@media (max-width: 1199px) {
-  .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
-    max-width: 420px;
-    max-height: 288px;
-  }
 }
 @media (max-width: 899px) {
   .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
-    max-width: 277.5px;
-    max-height: 180px;
     margin-bottom: 10px;
-  }
-}
-@media (max-width: 599px) {
-  .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
-    max-width: 290px;
-    max-height: 180px;
   }
 }
 .portfolio-card:first-child .portfolio-card__img img, .portfolio-card:nth-child(2) .portfolio-card__img img {
@@ -1014,7 +1007,7 @@ body > * {
 }
 @media (max-width: 899px) {
   .portfolio-card:first-child .portfolio-card__img img, .portfolio-card:nth-child(2) .portfolio-card__img img {
-    width: 354px;
+    width: 277.5px;
     height: 180px;
   }
 }
