--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -12,7 +12,7 @@
 }
 
 .portfolio-title {
-    margin-bottom: 65px;
+    margin-bottom: 30px;
     /* Tablet */
     @media (max-width: 1199px) {
         margin-bottom: 40px;
@@ -24,12 +24,42 @@
     }
 }
 
+.portfolio-variable {
+    display: flex;
+    margin-bottom: 33px;
+    column-gap: 70px;
+
+    // Mobile
+    @media(max-width: 899px) {
+        display: none;
+    }
+}
+
+.portfolio-variable__item {
+    color: #9EC2D0;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.3;
+    cursor: pointer;
+    transition: all 0.4s ease-in;
+}
+
+.portfolio-variable__item:hover {
+    color: red;
+}
+
+
+
+.portfolio-variable__item.active{
+    color: #000;
+}
+
 .portofolio-wrapper {
     display: flex;
     flex-wrap: wrap;
     column-gap: 30px;
     row-gap: 50px;
-
+    
     /* Tablet */
     @media (max-width: 1199px) {
         row-gap: 40px;
@@ -47,6 +77,13 @@
     }
 }
 
+.portofolio-wrapper a {
+    transition: color 0.4s ease-in;
+}
+
+.portofolio-wrapper a:hover {
+    color: #EF6857;
+}
 
 .portfolio-card {
     .portfolio-card__img {
@@ -55,6 +92,51 @@
         // max-height: 220px;
         object-fit: cover;
         object-position: center ;
+        
+        display: inline-block;
+        position: relative;    
+        &:after {
+            content: "";
+            opacity: 0;
+            transition: opacity 0.6s ease-in-out;
+        }
+
+        &:hover:after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;    
+            position: absolute;
+            top: 0;    
+            left: 0;   
+            background: transparent;
+            background-image: linear-gradient(to left, rgba(255, 221, 85, 0.75), rgba(255, 221, 85, 0.75));    
+            opacity: 0.8;    
+        }
+
+        &:before {
+            content: "";
+            opacity: 0;    
+            transition: opacity 0.5s;
+        }
+
+        &:hover:before {
+            content: "Смотреть проект";
+            padding: 14px 20px;
+            text-align: center;
+            color: #fff;
+            display: inline-block;
+            width: 208px;
+            height: 51px;
+            margin: -26px 0 0 -105px;  
+            border-radius: 50px;
+            position: absolute;    
+            top: 50%;
+            left: 50%;    
+            background: #ef6857 0 0 no-repeat;
+            z-index: 100;
+            opacity: 1;
+        }
 
         /* Tablet */
         @media (max-width: 1199px) {
@@ -78,6 +160,8 @@
         img {
             width: 350px;
             height: 220px;
+
+
 
             /* Tablet */
             @media (max-width: 1199px) {
@@ -143,6 +227,8 @@
         margin-bottom: 20px;
         object-fit: cover;
         object-position: center ;
+        
+
         /* Tablet */
         @media (max-width: 1199px) {
             // max-width: 420px;
@@ -165,7 +251,6 @@
         img {
             height: 370px;
             width: 540px;
-
             /* Tablet */
             @media (max-width: 1199px) {
                 width: 420px;
